force-app/main/default/objects/Product2/fields/AM_AC_Available__c.field-meta.xml
<CustomField>
    <fullName>AM_AC_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM AC Available</label>
    <type>Checkbox</type>
</CustomField>