force-app/main/default/objects/Product2/fields/AM_Acceleration_Time__c.field-meta.xml
<CustomField>
    <fullName>AM_Acceleration_Time__c</fullName>
    <label>AM Acceleration Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>