force-app/main/default/objects/Product2/fields/AM_Active_Warranty_Count__c.field-meta.xml
<CustomField>
    <fullName>AM_Active_Warranty_Count__c</fullName>
    <label>AM Active Warranty Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>