force-app/main/default/objects/Product2/fields/AM_Battery_Capacity__c.field-meta.xml
<CustomField>
    <fullName>AM_Battery_Capacity__c</fullName>
    <label>AM Battery Capacity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>