force-app/main/default/objects/Product2/fields/AM_Battery_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Battery_Type__c</fullName>
    <label>AM Battery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amaron</fullName>
            </value>
            <value>
                <fullName>Exide</fullName>
            </value>
            <value>
                <fullName>Sonic</fullName>
            </value>
            <value>
                <fullName>Company Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>