force-app/main/default/objects/Product2/fields/AM_Body_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Body_Type__c</fullName>
    <label>AM Body Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>MUV</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>Compact SUV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>