force-app/main/default/objects/Product2/fields/AM_Brand__c.field-meta.xml
<CustomField>
    <fullName>AM_Brand__c</fullName>
    <inlineHelpText>Select a Brand</inlineHelpText>
    <label>AM Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maruti Suzuki</fullName>
            </value>
            <value>
                <fullName>Tata</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Mahindra</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Mercedes-Benz</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Renault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>