force-app/main/default/objects/Product2/fields/AM_Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>AM_Budget_Range__c</fullName>
    <label>AM Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 3 Lakh</fullName>
            </value>
            <value>
                <fullName>3-4 Lakh</fullName>
            </value>
            <value>
                <fullName>4-5 Lakh</fullName>
            </value>
            <value>
                <fullName>5-6 Lakh</fullName>
            </value>
            <value>
                <fullName>6-8 Lakh</fullName>
            </value>
            <value>
                <fullName>8-10 Lakh</fullName>
            </value>
            <value>
                <fullName>Above 10 Lakh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>