force-app/main/default/objects/Product2/fields/AM_Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Chassis_Number__c</fullName>
    <label>AM Chassis Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>