force-app/main/default/objects/Product2/fields/AM_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Condition_Type__c</fullName>
    <label>AM Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>