force-app/main/default/objects/Product2/fields/AM_Contact__c.field-meta.xml
<CustomField>
    <fullName>AM_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AM Vehicles</relationshipLabel>
    <relationshipName>AM_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>