force-app/main/default/objects/Product2/fields/AM_Customer__c.field-meta.xml
<CustomField>
    <fullName>AM_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AM Vehicles</relationshipLabel>
    <relationshipName>AM_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>