force-app/main/default/objects/Product2/fields/AM_Customer_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>AM_Customer_Selling_Price__c</fullName>
    <formula>AM_Vehicle_Final_Amount__c + 0.15*(FinalAmount_beforeProfit__c-  AM_Profit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Customer Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>