force-app/main/default/objects/Product2/fields/AM_Date_Of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>AM_Date_Of_Purchase__c</fullName>
    <label>AM Date Of Purchase</label>
    <type>Date</type>
</CustomField>