force-app/main/default/objects/Product2/fields/AM_Dealer_Address__c.field-meta.xml
<CustomField>
    <fullName>AM_Dealer_Address__c</fullName>
    <label>AM Dealer Address</label>
    <type>TextArea</type>
</CustomField>