force-app/main/default/objects/Product2/fields/AM_Dealer_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Dealer_Email__c</fullName>
    <label>AM Dealer Email</label>
    <type>Email</type>
</CustomField>