force-app/main/default/objects/Product2/fields/AM_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Dealer_Name__c</fullName>
    <label>AM Dealer Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>