force-app/main/default/objects/Product2/fields/AM_Dealer_Phone__c.field-meta.xml
<CustomField>
    <fullName>AM_Dealer_Phone__c</fullName>
    <label>AM Dealer Phone</label>
    <type>Phone</type>
</CustomField>