force-app/main/default/objects/Product2/fields/AM_Dealer_Price__c.field-meta.xml
<CustomField>
    <fullName>AM_Dealer_Price__c</fullName>
    <label>AM Dealer Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>