force-app/main/default/objects/Product2/fields/AM_Doctor_Car__c.field-meta.xml
<CustomField>
    <fullName>AM_Doctor_Car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Doctor Car</label>
    <type>Checkbox</type>
</CustomField>