force-app/main/default/objects/Product2/fields/AM_Door_Count__c.field-meta.xml
<CustomField>
    <fullName>AM_Door_Count__c</fullName>
    <label>AM Door Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>