force-app/main/default/objects/Product2/fields/AM_Door_Style_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Door_Style_Type__c</fullName>
    <label>AM Door Style Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Scissor</fullName>
            </value>
            <value>
                <fullName>Butterfly</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>