force-app/main/default/objects/Product2/fields/AM_Engine_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Engine_Name__c</fullName>
    <label>AM Engine Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voodoo</fullName>
            </value>
            <value>
                <fullName>Hellephant</fullName>
            </value>
            <value>
                <fullName>Cobra Jet</fullName>
            </value>
            <value>
                <fullName>Hyper Pak</fullName>
            </value>
            <value>
                <fullName>Turbo-Rocket</fullName>
            </value>
            <value>
                <fullName>Super Hurricane</fullName>
            </value>
            <value>
                <fullName>Sonoramic Commando</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>