force-app/main/default/objects/Product2/fields/AM_Engine_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Engine_Number__c</fullName>
    <label>AM Engine Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>