force-app/main/default/objects/Product2/fields/AM_Extended_Renew_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Extended_Renew_Date__c</fullName>
    <formula>IF((AM_Vehicle_Renew__c==True),(DATE(YEAR(AM_Vehicle_Expiry_Date__c )+5, MONTH(AM_Vehicle_Expiry_Date__c ), DAY(AM_Vehicle_Expiry_Date__c ))) , AM_Vehicle_Expiry_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Extended Renew Date</label>
    <type>Date</type>
</CustomField>