force-app/main/default/objects/Product2/fields/AM_Fuel_Cost__c.field-meta.xml
<CustomField>
    <fullName>AM_Fuel_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AM Fuel Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>