force-app/main/default/objects/Product2/fields/AM_Fuel_Tank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>AM_Fuel_Tank_Capacity__c</fullName>
    <label>AM Fuel Tank Capacity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>