force-app/main/default/objects/Product2/fields/AM_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Fuel_Type__c</fullName>
    <inlineHelpText>Select any fuel type</inlineHelpText>
    <label>AM Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Petrol</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>