force-app/main/default/objects/Product2/fields/AM_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>AM_Gross_Weight__c</fullName>
    <label>AM Gross Weight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>