force-app/main/default/objects/Product2/fields/AM_Insurance__c.field-meta.xml
<CustomField>
    <fullName>AM_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Insurance</label>
    <type>Checkbox</type>
</CustomField>