force-app/main/default/objects/Product2/fields/AM_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>AM_Insurance_Amount__c</fullName>
    <label>AM Insurance Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>