force-app/main/default/objects/Product2/fields/AM_Insurance_Validity__c.field-meta.xml
<CustomField>
    <fullName>AM_Insurance_Validity__c</fullName>
    <label>AM Insurance Validity</label>
    <type>Date</type>
</CustomField>