force-app/main/default/objects/Product2/fields/AM_Is_Accident_Met__c.field-meta.xml
<CustomField>
    <fullName>AM_Is_Accident_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Is Accident Met</label>
    <type>Checkbox</type>
</CustomField>