force-app/main/default/objects/Product2/fields/AM_KiloWatt__c.field-meta.xml
<CustomField>
    <fullName>AM_KiloWatt__c</fullName>
    <label>AM KiloWatt</label>
    <length>16</length>
    <type>Text</type>
</CustomField>