force-app/main/default/objects/Product2/fields/AM_Kms_Driven__c.field-meta.xml
<CustomField>
    <fullName>AM_Kms_Driven__c</fullName>
    <label>AM Kms Driven</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>