force-app/main/default/objects/Product2/fields/AM_Last_Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>AM_Last_Odometer_Reading__c</fullName>
    <label>AM Last Odometer Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>