force-app/main/default/objects/Product2/fields/AM_Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Last_Service_Date__c</fullName>
    <label>AM Last Service Date</label>
    <type>Date</type>
</CustomField>