force-app/main/default/objects/Product2/fields/AM_Loan_Applicable__c.field-meta.xml
<CustomField>
    <fullName>AM_Loan_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Loan Applicable</label>
    <type>Checkbox</type>
</CustomField>