force-app/main/default/objects/Product2/fields/AM_Manufactured_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Manufactured_Date__c</fullName>
    <label>AM Manufactured Date</label>
    <type>Date</type>
</CustomField>