force-app/main/default/objects/Product2/fields/AM_Manufacturer_Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Manufacturer_Warranty_End_Date__c</fullName>
    <label>AM Manufacturer Warranty End Date</label>
    <type>Date</type>
</CustomField>