force-app/main/default/objects/Product2/fields/AM_Manufacturing_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Manufacturing_Batch_Number__c</fullName>
    <label>AM Manufacturing Batch Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>