force-app/main/default/objects/Product2/fields/AM_Manufacturing_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Manufacturing_Plant_Name__c</fullName>
    <label>AM Manufacturing Plant Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>