force-app/main/default/objects/Product2/fields/AM_Minimum_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>AM_Minimum_Sell_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AM Minimum Sell Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>