force-app/main/default/objects/Product2/fields/AM_Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Next_Service_Date__c</fullName>
    <label>AM Next Service Date</label>
    <type>Date</type>
</CustomField>