force-app/main/default/objects/Product2/fields/AM_No_of_Pre_Owner__c.field-meta.xml
<CustomField>
    <fullName>AM_No_of_Pre_Owner__c</fullName>
    <label>AM No of Pre-Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>