force-app/main/default/objects/Product2/fields/AM_NOC_From_RTA__c.field-meta.xml
<CustomField>
    <fullName>AM_NOC_From_RTA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM NOC From RTA</label>
    <type>Checkbox</type>
</CustomField>