force-app/main/default/objects/Product2/fields/AM_Odometer_Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Odometer_Reading_Date__c</fullName>
    <label>AM Odometer Reading Date</label>
    <type>Date</type>
</CustomField>