force-app/main/default/objects/Product2/fields/AM_Odometer_Status__c.field-meta.xml
<CustomField>
    <fullName>AM_Odometer_Status__c</fullName>
    <inlineHelpText>Enter Odometer Status</inlineHelpText>
    <label>AM Odometer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Tampered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>