force-app/main/default/objects/Product2/fields/AM_OEM_Warranty__c.field-meta.xml
<CustomField>
    <fullName>AM_OEM_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM OEM Warranty</label>
    <type>Checkbox</type>
</CustomField>