force-app/main/default/objects/Product2/fields/AM_Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>AM_Owner_Address__c</fullName>
    <label>AM Owner Address</label>
    <type>TextArea</type>
</CustomField>