force-app/main/default/objects/Product2/fields/AM_Owner_Adhar_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Owner_Adhar_Number__c</fullName>
    <defaultValue>&quot;0000 0000 0000&quot;</defaultValue>
    <label>AM Owner Adhar Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>