force-app/main/default/objects/Product2/fields/AM_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Owner_Email__c</fullName>
    <label>AM Owner Email</label>
    <type>Email</type>
</CustomField>