force-app/main/default/objects/Product2/fields/AM_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Owner_Name__c</fullName>
    <label>AM Owner Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>