force-app/main/default/objects/Product2/fields/AM_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>AM_Owner_Phone__c</fullName>
    <label>AM Owner Phone</label>
    <type>Phone</type>
</CustomField>