force-app/main/default/objects/Product2/fields/AM_Pollution_Check__c.field-meta.xml
<CustomField>
    <fullName>AM_Pollution_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Pollution Check</label>
    <type>Checkbox</type>
</CustomField>