force-app/main/default/objects/Product2/fields/AM_Profit__c.field-meta.xml
<CustomField>
    <fullName>AM_Profit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AM Expected Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>