force-app/main/default/objects/Product2/fields/AM_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>AM_Purchase_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AM Purchase Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>