force-app/main/default/objects/Product2/fields/AM_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Purchase_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>AM Purchase Date</label>
    <type>Date</type>
</CustomField>