force-app/main/default/objects/Product2/fields/AM_Purchase_Funded_From__c.field-meta.xml
<CustomField>
    <fullName>AM_Purchase_Funded_From__c</fullName>
    <label>AM Purchase Funded From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HDFC</fullName>
            </value>
            <value>
                <fullName>ICICI</fullName>
            </value>
            <value>
                <fullName>Home Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>