force-app/main/default/objects/Product2/fields/AM_Repair_Required__c.field-meta.xml
<CustomField>
    <fullName>AM_Repair_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Repair Required</label>
    <type>Checkbox</type>
</CustomField>