force-app/main/default/objects/Product2/fields/AM_RSA__c.field-meta.xml
<CustomField>
    <fullName>AM_RSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM RSA</label>
    <type>Checkbox</type>
</CustomField>