force-app/main/default/objects/Product2/fields/AM_Single_Owner__c.field-meta.xml
<CustomField>
    <fullName>AM_Single_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Single Owner</label>
    <type>Checkbox</type>
</CustomField>