force-app/main/default/objects/Product2/fields/AM_Stock_Code__c.field-meta.xml
<CustomField>
    <fullName>AM_Stock_Code__c</fullName>
    <label>AM Stock Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>