force-app/main/default/objects/Product2/fields/AM_Targeted_Sell_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Targeted_Sell_Date__c</fullName>
    <label>AM Targeted Sell Date</label>
    <type>Date</type>
</CustomField>