force-app/main/default/objects/Product2/fields/AM_Tool_Kit__c.field-meta.xml
<CustomField>
    <fullName>AM_Tool_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Tool Kit</label>
    <type>Checkbox</type>
</CustomField>