force-app/main/default/objects/Product2/fields/AM_Top_Speed__c.field-meta.xml
<CustomField>
    <fullName>AM_Top_Speed__c</fullName>
    <label>AM Top Speed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>