force-app/main/default/objects/Product2/fields/AM_Variant__c.field-meta.xml
<CustomField>
    <fullName>AM_Variant__c</fullName>
    <label>AM Variant</label>
    <length>16</length>
    <type>Text</type>
</CustomField>