force-app/main/default/objects/Product2/fields/AM_Vehicle_Age__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Age__c</fullName>
    <label>AM Vehicle Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1</fullName>
            </value>
            <value>
                <fullName>1-2</fullName>
            </value>
            <value>
                <fullName>2-4</fullName>
            </value>
            <value>
                <fullName>4-6</fullName>
            </value>
            <value>
                <fullName>6+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>