force-app/main/default/objects/Product2/fields/AM_Vehicle_Capacity__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Capacity__c</fullName>
    <label>AM Vehicle Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 Seater</fullName>
            </value>
            <value>
                <fullName>5 Seater</fullName>
            </value>
            <value>
                <fullName>6 Seater</fullName>
            </value>
            <value>
                <fullName>7 Seater</fullName>
            </value>
            <value>
                <fullName>8 Seater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>