force-app/main/default/objects/Product2/fields/AM_Vehicle_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Expiry_Date__c</fullName>
    <formula>DATE(YEAR(AM_Vehicle_Registration_Date__c )+15, MONTH(AM_Vehicle_Registration_Date__c ), DAY(AM_Vehicle_Registration_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Expiry Date</label>
    <type>Date</type>
</CustomField>