force-app/main/default/objects/Product2/fields/AM_Vehicle_Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Final_Amount__c</fullName>
    <formula>IF(RecordType.Name==&apos;AM Owner Type&apos;, AM_Purchase_Amount__c  +  AM_Profit__c  +  AM_Repair_Amount__c + AM_Fuel_Cost__c , AM_Dealer_Price__c  +  AM_Profit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Final Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>