force-app/main/default/objects/Product2/fields/AM_Vehicle_Length__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Length__c</fullName>
    <label>AM Vehicle Length</label>
    <length>5</length>
    <type>Text</type>
</CustomField>